# databaker_usage

./: .buildinfo  .flake8  .pre-commit-config.yaml  CODE_OF_CONDUCT.html  CONTRIBUTING.html  MAKEFILE  Makefile  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  useful_functions.html
.doctrees/: CODE_OF_CONDUCT.doctree  CONTRIBUTING.doctree  environment.pickle  index.doctree  modules.doctree  useful_functions.doctree
.github/workflows/: build-documentation.yml
_sources/: index.rst.txt
databaker_functions/: useful_functions.py
docs/: conf.py  index.rst  modules.rst  useful_functions.rst
example_uses/example_1/: README.md  pipeline_config.json  pyproject.toml  setup.cfg
example_uses/example_1/data/: internetusers2020.xls
example_uses/example_1/src/my_package1/: run_pipeline.py
example_uses/example_1/src/my_package1/analysis/: basic_analysis.py
example_uses/example_1/src/my_package1/data_handling/: read_messy_data.py
example_uses/example_2/: README.md  analysis_config.json  pyproject.toml  read_data_config.json  setup.cfg
example_uses/example_2/data/: ott.xls  tidy_data.csv
example_uses/example_2/src/my_package2/: analysis_pipeline.py  read_messy_data_pipeline.py
example_uses/example_2/src/my_package2/analysis/: basic_analysis.py
example_uses/example_2/src/my_package2/read_data/: read_messy_data.py
