[metadata]
name = my_package2
description = a brief description
version = 0.0.1
author = ASAP Team
platforms = win32
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    my_package2
install_requires =
    detect-secrets == 1.0.3
    pre-commit
    toml
    databaker
    pandas
python_requires = >=3.6
package_dir =
    =./src
zip_safe = no
